--- a/app/src/main/res/layout/activity_menu_lateral.xml
+++ b/app/src/main/res/layout/activity_menu_lateral.xml
@@ -20,6 +20,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_menu_lateral"
-        app:menu="@menu/activity_menu_lateral_drawer" />
+        app:menu="@menu/activity_menu_lateral_drawer"
+        />
 
 </android.support.v4.widget.DrawerLayout>
