--- a/app/src/main/res/layout/app_bar_menu_lateral.xml
+++ b/app/src/main/res/layout/app_bar_menu_lateral.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.s2pet.s2pet.MenuLateral">
+    tools:context="com.example.s2pet.s2pet.Home">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
