--- a/app/src/main/res/layout/content_menu_lateral.xml
+++ b/app/src/main/res/layout/content_menu_lateral.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.s2pet.s2pet.MenuLateral"
+    tools:context="com.example.s2pet.s2pet.Home"
     tools:showIn="@layout/app_bar_menu_lateral">
 
 </RelativeLayout>
