--- a/app/src/main/res/layout/nav_header_menu_lateral.xml
+++ b/app/src/main/res/layout/nav_header_menu_lateral.xml
@@ -16,7 +16,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:paddingTop="16dp"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <TextView
