--- a/app/src/main/res/layout/carteiravacina.xml
+++ b/app/src/main/res/layout/carteiravacina.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_cadastro__dono"
+    android:id="@+id/carteira_vacina"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.s2pet.s2pet.Cadastro_Dono">
-
+    tools:context="com.example.s2pet.s2pet.Vacina">
 
 </RelativeLayout>
