--- a/app/src/main/res/layout/menulateral.xml
+++ b/app/src/main/res/layout/menulateral.xml
@@ -9,7 +9,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/app_bar_menu_lateral"
+        layout="@layout/barlateral"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_menu_lateral"
+        app:headerLayout="@layout/headerlateral"
         app:menu="@menu/activity_menu_lateral_drawer"
         />
 
