--- a/app/src/main/res/menu/activity_menu_lateral_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_lateral_drawer.xml
@@ -3,33 +3,33 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/cad_dono"
+            android:icon="@drawable/cad_dono"
+            android:title="Cadastro" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/cad_pet"
+            android:icon="@drawable/cad_pet"
+            android:title="Meu Pet" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/vacina"
+            android:icon="@drawable/vacina"
+            android:title="Vacina" />
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/login"
+            android:icon="@drawable/login"
+            android:title="Login" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Me ajuda">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:id="@+id/compartilhar"
+                android:icon="@drawable/compartilhar"
+                android:title="Compartilhar" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:id="@+id/contato"
+                android:icon="@drawable/contato"
+                android:title="Contato" />
         </menu>
     </item>
 
