--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="cadastroDono" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="windowNoTitle">true</item>s
+    </style>
+
 </resources>
