--- a/app/src/main/res/layout/cadastrodono.xml
+++ b/app/src/main/res/layout/cadastrodono.xml
@@ -8,7 +8,114 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.s2pet.s2pet.Cadastro_Dono">
+    tools:context="com.example.s2pet.s2pet.Views.Cadastro_Dono">
 
+    <TextView
+        android:id="@+id/lblDono"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nome do Dono" />
+
+    <EditText
+        android:id="@+id/nomeDono"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lblDono"
+        android:hint="Nome do dono" />
+
+    <TextView
+        android:id="@+id/lblCpf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CPF "
+        android:layout_below="@id/nomeDono"/>
+
+    <EditText
+        android:id="@+id/NumCpf"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lblCpf"
+        android:hint="Numero do CPF"/>
+
+
+    <TextView
+        android:id="@+id/lblEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email"
+        android:layout_below="@id/NumCpf"/>
+
+    <EditText
+        android:id="@+id/EndEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lblEmail"
+        android:hint="Email"/>
+
+
+
+    <TextView
+        android:id="@+id/lblAnimal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/EndEmail"
+        android:text="Nome do Pet" />
+
+    <EditText
+        android:id="@+id/nomePet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lblAnimal"
+        android:hint="Nome do pet" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Vacina"
+        android:id="@+id/lblVacina"
+        android:layout_below="@id/nomePet"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Vacina"
+        android:id="@+id/Vacina"
+        android:layout_below="@id/lblVacina"/>
+
+    <Button
+        android:id="@+id/btnAdicionar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/Vacina"
+        android:onClick="adicionarVacina"
+        android:text="Adicionar Vacina" />
+
+
+    <TextView
+        android:id="@+id/lbllista"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:text="Lista de Vacinas"
+        android:layout_below="@id/btnAdicionar"/>
+
+    <TextView
+        android:id="@+id/listaVacinas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lbllista"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp" />
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Cadastrar"
+        android:onClick="salvarDados"
+        android:id="@+id/button2" />
 
 </RelativeLayout>
