--- a/app/src/main/res/layout/barlateral.xml
+++ b/app/src/main/res/layout/barlateral.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.s2pet.s2pet.Home">
+    tools:context="com.example.s2pet.s2pet.Views.Home">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
