--- a/app/src/main/res/layout/contato.xml
+++ b/app/src/main/res/layout/contato.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.s2pet.s2pet.Contato">
+    tools:context="com.example.s2pet.s2pet.Views.Contato">
 
 
 </RelativeLayout>
