--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.s2pet.s2pet.Home">
+    tools:context="com.example.s2pet.s2pet.Views.Home">
 
 
     <TextView
@@ -19,4 +19,10 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/textView2"
         android:textSize="80sp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fazer Cadastro"
+        android:id="@+id/btnCadastrar"/>
 </RelativeLayout>
