--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -5,7 +5,7 @@
     android:id="@+id/inicial"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.s2pet.s2pet.Splash">
+    tools:context="com.example.s2pet.s2pet.Views.Splash">
 
     <TextView
         android:id="@+id/s2pet"
