--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -10,55 +10,53 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.s2pet.s2pet.Views.Perfil">
 
-
     <TextView
         android:id="@+id/txtNomeDono"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/txtCpf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:layout_below="@id/txtNomeDono"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/txtNomeDono"/>
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/txtEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:layout_below="@id/txtCpf"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/txtCpf"/>
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/txtnomePet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_centerVertical="true"
+        android:layout_below="@id/txtEmail"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/txtEmail"/>
+        android:layout_centerVertical="true"
+        android:textSize="20sp" />
 
     <Button
+        android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Recuperar"
-        android:onClick="recuperar"
-        android:id="@+id/button3"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="recuperar"
+        android:text="Recuperar" />
 
     <EditText
         android:id="@+id/numCpfR"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Numero do CPF"
-        android:layout_below="@+id/listaVacinas"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:hint="Numero do CPF" />
 
 </RelativeLayout>
