--- a/app/src/main/res/layout/cadastrodono.xml
+++ b/app/src/main/res/layout/cadastrodono.xml
@@ -10,123 +10,117 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.s2pet.s2pet.Views.Cadastro_Dono">
 
-    <TextView
-        android:id="@+id/lblDono"
+    <EditText
+        android:id="@+id/vacina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nome do Dono" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/email"
+        android:layout_marginTop="21dp"
+        android:ems="10"
+        android:hint="Vacina"
+        android:inputType="text"
+        android:textColor="@color/colorPrimary" />
+
+    <Button
+        android:id="@+id/bt_cadastrar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="11dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="Cadastrar" />
 
     <EditText
         android:id="@+id/nomeDono"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/lblDono"
-        android:hint="Nome do dono" />
-
-    <TextView
-        android:id="@+id/lblCpf"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CPF "
-        android:layout_below="@id/nomeDono"/>
-
-    <EditText
-        android:id="@+id/NumCpf"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/lblCpf"
-        android:hint="Numero do CPF"/>
-
-
-    <TextView
-        android:id="@+id/lblEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email"
-        android:layout_below="@id/NumCpf"/>
+        android:layout_marginTop="11dp"
+        android:ems="10"
+        android:hint="Nome Completo"
+        android:inputType="textPersonName"
+        android:textColor="@color/colorPrimary"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
-        android:id="@+id/EndEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/lblEmail"
-        android:hint="Email"/>
-
-
-
-    <TextView
-        android:id="@+id/lblAnimal"
+        android:id="@+id/cpf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/EndEmail"
-        android:text="Nome do Pet" />
+        android:ems="9"
+        android:hint="CPF"
+        android:inputType="number"
+        android:textColor="@color/colorPrimary"
+        android:layout_alignBaseline="@+id/nomeDono"
+        android:layout_alignBottom="@+id/nomeDono"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <EditText
-        android:id="@+id/nomePet"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/lblAnimal"
-        android:hint="Nome do pet" />
-
-    <TextView
+        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Vacina"
-        android:id="@+id/lblVacina"
-        android:layout_below="@id/nomePet"/>
+        android:ems="17"
+        android:hint="E-mail"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/colorPrimary"
+        android:layout_below="@+id/NomePet"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="16dp" />
 
     <EditText
+        android:id="@+id/endereco"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Vacina"
-        android:id="@+id/vacina"
-        android:layout_below="@id/lblVacina"/>
+        android:ems="17"
+        android:hint="Endereço"
+        android:inputType="textAutoComplete"
+        android:textColor="@color/colorPrimary"
+        android:layout_below="@+id/nomeDono"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
-        android:id="@+id/btnAdicionar"
+        android:id="@+id/bt_adicionarVacina"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/vacina"
-        android:onClick="adicionarVacina"
-        android:text="Adicionar Vacina" />
+        android:background="@color/colorPrimaryDark"
+        android:text="Adicionar vacina"
+        android:layout_marginTop="19dp"
+        android:layout_below="@+id/vacina"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
+    <EditText
+        android:id="@+id/listaVac"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Lista de vacinas"
+        android:inputType="text|textAutoCorrect|textMultiLine|textImeMultiLine|textLongMessage"
+        android:textColor="@color/colorPrimary"
+        android:layout_alignTop="@+id/bt_adicionarVacina"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="48dp"
+        android:layout_above="@+id/bt_cadastrar" />
 
-    <TextView
-        android:id="@+id/lbllista"
+    <EditText
+        android:id="@+id/NomePet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:text="Lista de Vacinas"
-        android:layout_below="@id/btnAdicionar"/>
-
-    <TextView
-        android:id="@+id/listaVacinas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/lbllista"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp" />
-
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="Cadastrar"
-        android:onClick="salvarDados"
-        android:id="@+id/button2" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Perfil"
-        android:onClick="irPerfil"
-        android:id="@+id/perfil"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/button2"
-        android:layout_toEndOf="@+id/button2" />
+        android:ems="9"
+        android:hint="Nome do pet"
+        android:inputType="number"
+        android:textColor="@color/colorPrimary"
+        android:layout_below="@+id/endereco"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="12dp" />
 
 
 </RelativeLayout>
