--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -10,13 +10,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.s2pet.s2pet.Views.Perfil">
 
+    <EditText
+        android:id="@+id/numCpfR"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Numero do CPF"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 
     <TextView
         android:id="@+id/txtNomeDono"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/numCpfR"/>
 
     <TextView
         android:id="@+id/txtCpf"
@@ -35,11 +44,11 @@
         android:layout_below="@id/txtCpf"/>
 
     <TextView
-        android:id="@+id/txtnomePet"
+        android:id="@+id/nomePets"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:layout_centerVertical="true"
+        android:text="ooooo"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/txtEmail"/>
 
@@ -51,14 +60,5 @@
         android:id="@+id/button3"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
-
-    <EditText
-        android:id="@+id/numCpfR"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Numero do CPF"
-        android:layout_below="@+id/listaVacinas"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
